let me fix that

--- a/jukepi.html
+++ b/jukepi.html
@@ -18,11 +18,13 @@
         padding-top: 10px;
      }
       #jukechat {
+        width: 50%;
         background-color: #6441A4;
         margin-top: 20px;
         float: right;
      }
       #jukefeed {
+        width: 50%;
         background-color: #6441A4;
         margin-top: 20px;
         float: left;
