--- a/jukepi.html
+++ b/jukepi.html
@@ -36,19 +36,23 @@
 
     <button onclick="jukefeed()">hide/show jukefeed</button>
     <div id="jukefeed">
-      <iframe
+     <iframe
       src="https://player.twitch.tv/?channel=jukeboxtv_"
       frameborder="0"
       allowfullscreen="true"
       scrolling="no"
       height="378"
       width="620" >
-      </iframe>
+     </iframe>
     </div>
 
     <button onclick="jukechat()">hide/show jukechat</button>
     <div id="jukechat">
-     <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat">
+     <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat"
+      frameborder="0"
+      scrolling="no"
+      height="500"
+      width="350">
      </iframe>
     </div>
 
