--- a/jukepi.html
+++ b/jukepi.html
@@ -52,7 +52,8 @@
       frameborder="0"
       scrolling="no"
       height="500"
-      width="350">
+      width="350"
+      theme="dark">
      </iframe>
     </div>
 
