changing link type

--- a/jukepi.html
+++ b/jukepi.html
@@ -30,7 +30,7 @@
         float: left;
       }
       @media screen and (max-width:800px) {
-  .jukechat, .jukefeed {
+  #jukechat, #jukefeed {
     width:100%; /* The width is 100%, when the viewport is 800px or smaller */
   }
 }
