--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </p>
   <p>
     <center>
-      <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Site Being Built, Hold Tight</button></a>
+      <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Old Site > </button></a>
 
       <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-download" alt="Protect Yourself"></i> IT Support</button></a>
     </center>
