realease .03 finally some buttons on support; cleaned up Home

--- a/support.html
+++ b/support.html
@@ -28,29 +28,31 @@
   <center><img src="images/fresh_logo.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i>HOME</button></a></li>
-  <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
+  <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
-  <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
+  <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li -->
     </center>
 
     <center>
       <h1>IT SUPPORT<h1>
     </center>
 
+  <center>
   <p>
     Here I can provide links to very common but powerful tools used in the IT field,
     most tools shown are network related tools to help identify issues on a network.
   </p>
+  </center>
 <!-- Start Listing them supporting links -->
 
-      <p>
-
+<a href="https://www.grc.com/x/ne.dll?bh0bkyd2"><button class="menu"><i class="fas fa-download" alt="Scan Yourself"></i> Port Scan (Common-All)</button></a>
+<a href="https://nvd.nist.gov/"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Warning: Gov. Site)</button></a>
       </p>
   </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2019 version: .02 </b></center>
+    <center><b> &copy; Phantom Inc. 2019 version: .03 </b></center>
   </footer>
 </html>
