finally fixed css?

--- a/support.html
+++ b/support.html
@@ -47,8 +47,8 @@
   </center>
 <!-- Start Listing them supporting links -->
 
-<a href="https://www.grc.com/x/ne.dll?bh0bkyd2"><button class="menu"><i class="fas fa-download" alt="Scan Yourself"></i> Port Scan (Common-All)</button></a>
-<a href="https://nvd.nist.gov/"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Warning: Gov. Site)</button></a>
+<a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-download" alt="Scan Yourself"></i> Port Scan (Common-All)</button></a>
+<a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Warning: Gov. Site)</button></a>
       </p>
   </body>
 
