cleaned up support page

--- a/support.html
+++ b/support.html
@@ -46,10 +46,13 @@
   </p>
   </center>
 <!-- Start Listing them supporting links -->
+  <p>
+    <center>
+    <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-download" alt="Scan Yourself"></i> Port Scan (Common-All)</button></a>
+    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Warning: Gov. Site)</button></a>
+  </center>
+  </p>
 
-<a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-download" alt="Scan Yourself"></i> Port Scan (Common-All)</button></a>
-<a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Warning: Gov. Site)</button></a>
-      </p>
   </body>
 
   <footer>
