formatting, editing on gramma

--- a/support.html
+++ b/support.html
@@ -41,8 +41,8 @@
 
   <center>
   <p>
-    Here I can provide links to very common but powerful tools used in the IT field,
-    most tools shown are network related tools to help identify issues on a network.
+    Here I can provide links to very common but powerful tools used in the IT field, <br />
+    most tools shown are network related tools and require no download.
   </p>
   </center>
 <!-- Start Listing them supporting links -->
