code clean up, comments only, readme update

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- PHANTOM INC 2019 __TEMP SITE
-        New Site Coming Soon, or building upon this one.
+<!-- PHANTOM INC 2019 __PHANT SITE
+        Official Site : building upon this one.
           | ''|
   -->
 <html>
