--- a/support.html
+++ b/support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- PHANTOM INC 2019 __TEMP SITE ~ SUPPORT PAGE ~
+<!-- PHANTOM INC 2019 __PHANT SITE - SUPPORT PAGE
         New Site Coming Soon, or building upon this one.
           | ''|
   -->
