fixed more gramma

--- a/support.html
+++ b/support.html
@@ -42,7 +42,7 @@
   <center>
   <p>
     Here I can provide links to very common but powerful tools used in the IT field, <br />
-    most tools shown are network related tools and require no download.
+    most tools shown are network related and require no download.
   </p>
   </center>
 <!-- Start Listing them supporting links -->
