Grammar, changed support listing

--- a/support.html
+++ b/support.html
@@ -49,7 +49,7 @@
   <p>
     <center>
     <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-download" alt="Scan Yourself"></i> Port Scan (Common-All)</button></a>
-    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Warning: Gov. Site)</button></a>
+    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Gov. Site)</button></a>
   </center>
   </p>
 
