added ghidra link, kali & Parrot

--- a/support.html
+++ b/support.html
@@ -48,9 +48,17 @@
 <!-- Start Listing them supporting links -->
   <p>
     <center>
-    <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-download" alt="Scan Yourself"></i> Port Scan (Common-All)</button></a>
-    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Know Yourself"></i> NIST Database (Gov. Site)</button></a>
-  </center>
+    <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan (Common-All) </button></a>
+    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database (Gov. Site) </button></a>
+    <a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra (NSA Tool) </button></a>
+    </center>
+  </p>
+  <p>
+    <center>
+    <a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security </button></a>
+    <a href="https://www.kali.org/downloads/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux </button></a>
+
+    </center>
   </p>
 
   </body>
