list them downloads

--- a/support.html
+++ b/support.html
@@ -48,16 +48,19 @@
 <!-- Start Listing them supporting links -->
   <p>
     <center>
-    <a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan (Common-All) </button></a>
-    <a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database (Gov. Site) </button></a>
-    <a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra (NSA Tool) </button></a>
+      <ul>
+    <li><a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan (Common-All) </button></a></li>
+    <li><a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database (Gov. Site) </button></a></li>
+    <li><a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra (NSA Tool) </button></a></li>
+      </ul>
     </center>
   </p>
   <p>
     <center>
-    <a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security </button></a>
-    <a href="https://www.kali.org/downloads/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux </button></a>
-
+      <ul>
+    <li><a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security </button></a></li>
+    <li><a href="https://www.kali.org/downloads/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux </button></a></li>
+      </ul>
     </center>
   </p>
 
