switched back to download logo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <center>
       <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Old Site > </button></a>
 
-      <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-ghost" alt="Protect Yourself"></i> IT Support</button></a>
+      <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-download" alt="Protect Yourself"></i> IT Support</button></a>
     </center>
   </p>
   </body>
