--- a/support.html
+++ b/support.html
@@ -35,33 +35,30 @@
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li -->
     </center>
 
-    <center>
-      <h1>IT SUPPORT<h1>
-    </center>
-
-  <center>
-  <p>
-    Here I can provide links to very common but powerful tools used in the IT field, <br />
-    most tools shown are network related and require no download.
-  </p>
-  </center>
+  <h1>IT SUPPORT</h1>
+  <div>
+    Below I have provided links to tools that are very common but powerful and are currently used in the IT field.
+  </div>
 <!-- Start Listing them supporting links -->
   <p>
-    <center>
+      <h2><u>Websites</u></h2>
       <ul>
-    <li><a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan (Common-All) </button></a></li>
-    <li><a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database (Gov. Site) </button></a></li>
-    <li><a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra (NSA Tool) </button></a></li>
+    <li><a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan [Common-All] </button></a></li>
+    <li><a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site] </button></a></li>
       </ul>
-    </center>
+ </p>
+  <p>
+    <h2><u>Reverse Engineering</u></h2>
+    <ul>
+      <li><a href="https://ghidra-sre.org/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Reverse-engineer Yourself"></i> Ghidra [NSA Tool] </button></a></li>
+    </ul>
   </p>
   <p>
-    <center>
+      <h2><u>Linux Secuirty Suites</u></h2>
       <ul>
     <li><a href="https://www.parrotsec.org/download-security.php" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself"></i> Parrot Security </button></a></li>
     <li><a href="https://www.kali.org/downloads/" target="_blank"><button class="menu"><i class="fas fa-download" alt="Hack Yourself again"></i> Kali Linux </button></a></li>
       </ul>
-    </center>
   </p>
 
   </body>
