keep lists small

--- a/index.html
+++ b/index.html
@@ -37,15 +37,13 @@
     </center>
   </p>
 
-  <p>
     <h2><u>Update 0</u></h2>
     <ul>
     <li>- Small updates are being made to tiddy up for future expansions</li>
     <li>- Using the links below or above could be useful to youtube </li>
-    <li>- Contact currently under construction, feel free to contact me using links above </li>
+    <li>- Contact under construction, contact using the links above </li>
     </ul>
   <center>  |'' | </center>
-  </p>
 
   <p>
     <center>
