--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   </p>
 
     <h2><u>Update 0</u></h2>
-    <ul>
-    <li>- Small updates are being made to tiddy up for future expansions</li>
-    <li>- Using the links below or above could be useful to youtube </li>
-    <li>- Contact under construction, contact using the links above </li>
+    <ul class="p">
+    <li class="p">- Small updates are being made to tiddy up for future expansions</li>
+    <li class="p">- Using the links below or above could be useful to youtube </li>
+    <li class="p">- Contact under construction, contact using the links above </li>
     </ul>
   <center>  |'' | </center>
 
