--- a/posts.html
+++ b/posts.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- PHANTOM INC 2019 __PHANT SITE
-        Official Site : building upon this one.
+<!-- PHANTOM INC 2019 __PHANT SITE_PastPosts
+        Past posts from the front page are listed here
           | ''|
   -->
 <html>
 <head>
-  <title>Phantom Inc (Coming Soon)</title>
+  <title>Phantom Inc - Posts</title>
   <link rel="stylesheet" href="css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
@@ -28,7 +28,7 @@
   <center><img src="images/fresh_logo.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
     <p>
       <center>
-  <!-- li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li -->
+  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
   <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
@@ -37,26 +37,12 @@
     </center>
   </p>
 
+  <h1>All Posts</h1>
+
     <h2><u>Update 0</u></h2>
     <ul class="p">
     <li class="p">- Small updates are being made to tiddy up for future expansions</li>
     <li class="p">- Using the links below or above could be useful to youtube </li>
     <li class="p">- Contact under construction, contact using the links above </li>
-    <li class="d"> > > posted March 2019</li>
     </ul>
-
-  <center><a href="posts.html"><button class="postsb"><i class="fas fa-cog fa-spin" alt="Old Site"></i> All Posts |' ' | </button></a></center>
-
-  <p>
-    <center>
-      <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Old Site > </button></a>
-
-      <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-download" alt="Protect Yourself"></i> IT Support</button></a>
-    </center>
-  </p>
-  </body>
-
-  <footer>
-    <center><b> &copy; Phantom Inc. 2019 version: .03 </b></center>
-  </footer>
-</html>
+  <center>  |'' | </center>
