--- a/posts.html
+++ b/posts.html
@@ -25,7 +25,7 @@
 </head>
 
   <body>
-  <center><img src="images/fresh_logo.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+  <center><img src="images/phantom_inc.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
     <p>
       <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
@@ -38,11 +38,14 @@
   </p>
 
   <h1>All Posts</h1>
-
+  <p>
     <h2><u>Update 0</u></h2>
     <ul class="p">
-    <li class="p">- Small updates are being made to tiddy up for future expansions</li>
-    <li class="p">- Using the links below or above could be useful to youtube </li>
-    <li class="p">- Contact under construction, contact using the links above </li>
+      <li class="p">- Small updates are being made to tiddy up for future expansions</li>
+      <li class="p">- Using the links below or above could be useful to youtube </li>
+      <li class="p">- Contact under construction, contact using the links above </li>
+      <li class="d"> > > posted March 2019</li>
     </ul>
-  <center>  |'' | </center>
+  </p>
+
+<center>  |'' | </center>
