footer added, changed format

--- a/posts.html
+++ b/posts.html
@@ -44,8 +44,18 @@
       <li class="p">- Small updates are being made to tiddy up for future expansions</li>
       <li class="p">- Using the links below or above could be useful to youtube </li>
       <li class="p">- Contact under construction, contact using the links above </li>
-      <li class="d"> > > posted March 2019</li>
+      <li class="d"> &gt; &gt; posted March 2019</li>
     </ul>
   </p>
 
-<center>  |'' | </center>
+  <center> "Hack The Planet!" |'' | </center>
+
+</body>
+
+
+  <footer>
+    <center><b> &copy; Phantom Inc. 2019 version: .03 </b></center>
+  </footer>
+
+
+</html>
