--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <li class="p">- Small updates are being made to tiddy up for future expansions</li>
       <li class="p">- Using the links below or above could be useful to youtube </li>
       <li class="p">- Contact under construction, contact using the links above </li>
-      <li class="d"> > > posted March 2019</li>
+      <li class="d"> &gt; &gt; posted March 2019</li>
     </ul>
 
   <center><a href="posts.html"><button class="postsb"><i class="fas fa-cog fa-spin" alt="Old Site"></i> All Posts |' ' | </button></a></center>
