removed cog from all posts, hidding all posts for now

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <li class="d"> &gt; &gt; posted March 2019</li>
     </ul>
 
-  <center><a href="posts.html"><button class="postsb"><i class="fas fa-cog fa-spin" alt="Old Site"></i> All Posts |' ' | </button></a></center>
+  <center><a href="posts.html"><button class="postsb"><i class="fas " alt="Old Site"></i> All Posts |' ' | </button></a></center>
 
   <p>
     <center>
