actually hiding all posts now >.< also changed list format again...

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
     </center>
+    <!-- Start of Post Section -->
   </p>
 
     <h2><u>Update 0</u></h2>
@@ -45,7 +46,8 @@
       <li class="d"> &gt; &gt; posted March 2019</li>
     </ul>
 
-  <center><a href="posts.html"><button class="postsb"><i class="fas " alt="Old Site"></i> All Posts |' ' | </button></a></center>
+    <!-- All Posts Button -->
+  <!-- <center><a href="posts.html"><button class="postsb"><i class="fas " alt="Old Site"></i> All Posts |' ' | </button></a></center> -->
 
   <p>
     <center>
