--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     </center>
     <!-- Start of Post Section -->
   </p>
-
+  <center>
     <h2><u>Update 0</u></h2>
     <ul class="p">
       <li class="p">- Small updates are being made to tiddy up for future expansions</li>
       <li class="p">- Using the links below or above could be useful to youtube </li>
       <li class="p">- Contact under construction, contact using the links above </li>
-      <li class="d"> &gt; &gt; posted March 2019</li>
+      <li class="d"> &gt; &gt; posted March 2019 &lt; &lt;</li>
     </ul>
-
+</center>
     <!-- All Posts Button -->
   <!-- <center><a href="posts.html"><button class="postsb"><i class="fas " alt="Old Site"></i> All Posts |' ' | </button></a></center> -->
 
