--- a/posts.html
+++ b/posts.html
@@ -38,13 +38,14 @@
   </p>
 
   <h1>All Posts</h1>
-  <p>
+  
+    <p>
     <h2><u>Update 0</u></h2>
     <ul class="p">
       <li class="p">- Small updates are being made to tiddy up for future expansions</li>
       <li class="p">- Using the links below or above could be useful to youtube </li>
       <li class="p">- Contact under construction, contact using the links above </li>
-      <li class="d"> &gt; &gt; posted March 2019</li>
+      <li class="d"> &gt; &gt; posted March 2019 &lt; &lt;</li>
     </ul>
   </p>
 
