Site title updates, creation of contact page

--- a/support.html
+++ b/support.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- PHANTOM INC 2019 __PHANT SITE - SUPPORT PAGE
-        New Site Coming Soon, or building upon this one.
+        My tools are your tools, educate yoself.
           | ''|
   -->
 <html>
