--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,21 @@
  </script>
 </head>
 
-  <body>
+<body>
+  <center><img src="images/phantom_inc.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+  <p>
+    <center>
+  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
+  <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
+  <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
+  <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
+  <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
+  <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
+  </center>
+  </p>
+
     <h1>Contact</h1>
+
     <ul>
       <li><a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-sms" alt="SMS"></i> Text Me </button></a></li>
       <li><a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call Me </button></a></li>
