--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <h1>Contact</h1>
 
     <ul>
-      <li><a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-sms" alt="SMS"></i> Text Me </button></a></li>
+      <li><a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-comments" alt="SMS"></i> Text Me </button></a></li>
       <li><a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call Me </button></a></li>
       <li><a href="mailto:contact@phantominc.net?subject=PhantomInc Support"><button class="menu"><i class="fas fa-envelope" alt="Email"></i> Email Me </button></a></li>
 
