--- a/posts.html
+++ b/posts.html
@@ -41,7 +41,7 @@
 
     <p>
     <h2><u>Update 0</u></h2>
-    <ul class="p">
+    <ul class="po">
       <li class="p">- Small updates are being made to tiddy up for future expansions</li>
       <li class="p">- Using the links below or above could be useful to youtube </li>
       <li class="p">- Contact under construction, contact using the links above </li>
