added 2nd temp post, with P tags

--- a/index.html
+++ b/index.html
@@ -35,17 +35,27 @@
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
     </center>
-    <!-- Start of Post Section -->
   </p>
+    <!-- Start of Post Section -->
+    <p>
+  <h2><u>Update 1</u></h2>
+   <ul class="po">
+    <li class="p">- Contacts Page is live</li>
+    <li class="p">- new menu inbound </li>
+    <li class="p">- this is a temporary post, enjoy the rare occasion</li>
+    <li class="d"> &gt; &gt; posted again March 2019 &lt; &lt;</li>
+  </ul>
+   </p>
 
-    <h2><u>Update 0</u></h2>
-    <ul class="p">
+   <p>
+  <h2><u>Update 0</u></h2>
+    <ul class="po">
       <li class="p">- Small updates are being made to tiddy up for future expansions</li>
       <li class="p">- Using the links below or above could be useful to youtube </li>
       <li class="p">- Contact under construction, contact using the links above </li>
       <li class="d"> &gt; &gt; posted March 2019 &lt; &lt;</li>
     </ul>
-
+  </p>
     <!-- All Posts Button -->
   <!-- <center><a href="posts.html"><button class="postsb"><i class="fas " alt="Old Site"></i> All Posts |' ' | </button></a></center> -->
 
