center them posts?

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </center>
   </p>
     <!-- Start of Post Section -->
-    <p>
+    <center><p>
   <h2><u>Update 1</u></h2>
    <ul class="po">
     <li class="p">- Contacts Page is live</li>
@@ -56,6 +56,7 @@
       <li class="d"> &gt; &gt; posted March 2019 &lt; &lt;</li>
     </ul>
   </p>
+</center>
     <!-- All Posts Button -->
   <!-- <center><a href="posts.html"><button class="postsb"><i class="fas " alt="Old Site"></i> All Posts |' ' | </button></a></center> -->
 
