added temp post to posts page

--- a/posts.html
+++ b/posts.html
@@ -38,7 +38,15 @@
   </p>
 
   <h1>All Posts</h1>
-
+<p>
+  <h2><u>Update 1</u></h2>
+   <ul class="po">
+    <li class="p">- Contacts Page is live</li>
+    <li class="p">- new menu inbound </li>
+    <li class="p">- this is a temporary post, enjoy the rare occasion</li>
+    <li class="d"> &gt; &gt; posted again March 2019 &lt; &lt;</li>
+  </ul>
+</p>
     <p>
     <h2><u>Update 0</u></h2>
     <ul class="po">
