--- a/thepolecatlounge.html
+++ b/thepolecatlounge.html
@@ -11,7 +11,7 @@
   	</head>
 
     <body>
-  		<center><h1>Redirecting to Dabstiny... <i class="fas fa-cog fa-spin" alt="Redirecting"></i></h1></center>
+  		<center><h1>Redirecting to The Polecat Lounge... <i class="fas fa-cog fa-spin" alt="Redirecting"></i></h1></center>
   	</body>
 
   <footer>
