added color scheme to match

--- a/thepolecatlounge.html
+++ b/thepolecatlounge.html
@@ -8,7 +8,13 @@
   		<title>ThePoleCatLounge... Redirecting...</title>
   		<meta http-equiv="REFRESH" content="0;url=https://jeremysmai.github.io/thepolecatlounge/thelounge.html">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-  	</head>
+      <style>
+        body {
+          background-color: #FFD700;
+          color: white;
+        }
+      </style>
+    </head>
 
     <body>
   		<center><h1>Redirecting to The Polecat Lounge... <i class="fas fa-cog fa-spin" alt="Redirecting"></i></h1></center>
