--- a/dabstiny.html
+++ b/dabstiny.html
@@ -8,7 +8,13 @@
   		<title>Dabstiny... Redirecting...</title>
   		<meta http-equiv="REFRESH" content="0;url=https://sites.google.com/view/phantominc/dabstiny">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-  	</head>
+      <style>
+        body {
+          background-color: rgba(33,33,33,1);
+          color: white;
+        }
+      </style>
+    </head>
 
     <body>
   		<center><h1>Redirecting to Dabstiny... <i class="fas fa-cog fa-spin" alt="Redirecting"></i></h1></center>
