fixed download links

--- a/posts.html
+++ b/posts.html
@@ -22,6 +22,7 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
+ <center><i> oh hello there, you shouldn't be here, this is unfinished...</i></center>
 </head>
 
   <body>
