--- a/support.html
+++ b/support.html
@@ -46,7 +46,7 @@
         <li><a href="https://prism-break.org/en/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Check Yourself"></i> PRISM? [Stay Safe...] </button></a></li>
     <li><a href="https://www.grc.com/x/ne.dll?bh0bkyd2" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Scan Yourself"></i> Port Scan [Common-All] </button></a></li>
     <li><a href="https://nvd.nist.gov/" target="_blank"><button class="menu"><i class="fas fa-globe" alt="Know Yourself"></i> NIST Database [Gov. Site] </button></a></li>
-    <li><a href="http://www.ipchicken.com" target="_blank"><img src="http://www.ipchicken.com/images/ipc.gif" width="88" height="31" border="0"></a></li>
+    <li><a href="http://www.icanhazip.com" target="_blank"><button class="menu"><i class="fas fa-globe" alt="IP Yourself"></i> Shows Your IP address </button></a></li>
       </ul>
  </p>
   <p>
