added donation link for paypal

--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
     <center>
       <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Old Site > </button></a>
       <a href="https://jeremysmai.github.io/phantominc/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
-      <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Protect Yourself"></i> IT Support</button></a>
+      <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
     </center>
-  </p>
+  </p><center><a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate?"></i>Donate</button></a>
+  <div class="donate">
+  <div class="donate" style="height:24px;width:0%">$0</div>
+</div>
+</center>
   </body>
 
   <footer>
