--- a/support.html
+++ b/support.html
@@ -36,9 +36,9 @@
     </center>
 
   <h1>IT SUPPORT</h1>
-  <div>
+  <notice>
     Below I have provided links to tools that are very common but powerful and are currently used in the IT field.
-  </div>
+  </notice>
 <!-- Start Listing them supporting links -->
   <p>
       <h2><u>Websites</u></h2>
