-added icon in footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <a href="https://jeremysmai.github.io/phantominc/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
       <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
     </center>
-  </p><center><a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate?"></i>Donate</button></a>
+  </p><center><a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate? - this is a test, link is real"></i>Donate</button></a>
   <div class="donate">
   <div class="donate" style="height:24px;width:0%">$0</div>
 </div>
@@ -70,6 +70,6 @@
   </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2019 version: .04 </b></center>
+    <center><b> &copy; Phantom Inc. 2019 <i class="fas fa-user-astronaut"></i> version: .04 </b></center>
   </footer>
 </html>
