commented out old notice tag, added more simple line

--- a/support.html
+++ b/support.html
@@ -36,9 +36,11 @@
     </center>
 
   <h1>IT SUPPORT</h1>
-  <notice>
+</br>
+  <!--notice>
     Below I have provided links to tools that are very common but powerful and are currently used in the IT field.
-  </notice>
+  </notice-->
+  <i><center> Below I have provided links to tools that are very common but powerful and are currently used in the IT field. </center></i>
 <!-- Start Listing them supporting links -->
   <p>
       <h2><u>Websites</u></h2>
