little lore added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- PHANTOM INC 2019 __PHANT SITE
         Official Site : building upon this one, from scratch.
           | ''|
+            creating 'em since '02
   -->
 <html>
 <head>
