contact is live

--- a/contact.html
+++ b/contact.html
@@ -22,17 +22,16 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
- <center><i> oh hello there, you shouldn't be here, this is unfinished...</i></center>
 </head>
 
 <body>
-  <center><img src="images/phantom_inc.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+  <center><img src="images/fresh_logo.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
   <p>
     <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
   <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
-  <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
+  <!--li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li-->
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
   </center>
@@ -60,7 +59,7 @@
  </body>
 
  <footer>
-   <center><b> &copy; Phantom Inc. 2019 version: .04 </b></center>
+   <center><b> &copy; Phantom Inc. 2019 <i class="fas fa-user-astronaut"></i> version: .05 </b></center>
  </footer>
 
 </html>
