--- a/downloads.html
+++ b/downloads.html
@@ -52,6 +52,6 @@
     </center>
 </body>
   <footer>
-    <center><b> &copy; Phantom Inc. 2019 version: .04 </b></center>
+    <center><b> &copy; Phantom Inc. 2019 <i class="fas fa-user-astronaut"></i> version: .05 </b></center>
   </footer>
 </html>
