--- a/posts.html
+++ b/posts.html
@@ -32,7 +32,7 @@
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <i class="fab fa-fort-awesome"></i> - </button></a></li>
   <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
-  <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
+  <!--li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li-->
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
     </center>
@@ -64,7 +64,7 @@
 
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2019 version: .04 </b></center>
+    <center><b> &copy; Phantom Inc. 2019 <i class="fas fa-user-astronaut"></i> version: .05 </b></center>
   </footer>
 
 
