--- a/support.html
+++ b/support.html
@@ -65,9 +65,11 @@
       </ul>
   </p>
 
+  <center> Need to contact me? <a href="contact.html"></a></center>
+
   </body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2019 version: .04 </b></center>
+    <center><b> &copy; Phantom Inc. 2019 <i class="fas fa-user-astronaut"></i> version: .05 </b></center>
   </footer>
 </html>
