finally added the link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Old Site > </button></a>
       <a href="https://jeremysmai.github.io/phantominc/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
       <a href="https://jeremysmai.github.io/phantominc/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+      <a href="https://jeremysmai.github.io/phantominc/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
     </center>
   </p>
   </body>
