contact button on support page added

--- a/support.html
+++ b/support.html
@@ -65,7 +65,7 @@
       </ul>
   </p>
 
-  <center> Need to contact me? <a href="contact.html"></a></center>
+  <center> Need to contact me? <a href="https://jeremysmai.github.io/phantominc/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a></center>
 
   </body>
 
