--- a/temp.html
+++ b/temp.html
@@ -30,17 +30,17 @@ p{
 </head>
 <body>
 
-<div class="banner"><!--Here we reference the section for the video to be played -->
+<div class="banner"> <!--Here we reference the section for the video to be played -->
   <p>
   Templine0 <!--These lines exist to show the background image flexs around the content ex. the templine -->
   </p>
 <p>
   Templine1
 </p>
-  <video autoplay loop muted class="banner__video" ><!--We use video to reference html vs css -->
+  <video autoplay loop muted class="banner__video" > <!--We use video to reference html vs css -->
     <source src="http://myweb.students.wwu.edu/~ishikan/CS102/couchpotato/GroupProject/media/gp1.mp4" type="video/mp4">
   </video>
-</div-->
+</div>
 
 </body>
 </html>
