--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
     <li><a href="https://www.flickr.com/photos/169754369@N03/"><button class="menu"><i class="fab fa-flickr"></i> 2</button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
-  <!--li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li-->
+  <li><a href="https://www.instagram.com/phant0m1nc/"><button class="menu"><i class="fab fa-instagram"></i></button></a></li>
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
     </center>
