goofed on some labels, fixed now

--- a/jukepi.html
+++ b/jukepi.html
@@ -59,7 +59,7 @@
      </iframe>
     </div>
 
-    <button onclick="mixfeed()">hide/show twitchchat</button>
+    <button onclick="mixfeed()">hide/show mixerfeed</button>
       <div id="mixfeed">
         <iframe allowfullscreen="true"
         src="https://mixer.com/embed/player/JukeboxTV?disableLowLatency=1"
@@ -67,7 +67,7 @@
         height="349">
   </iframe>
 
-    <button onclick="mixchat()">hide/show twitchchat</button>
+    <button onclick="mixchat()">hide/show mixerchat</button>
       <div id="mixchat">
         <iframe allowfullscreen="true"
         src="https://mixer.com/embed/chat/JukeboxTV"
