--- a/startpage.html
+++ b/startpage.html
@@ -25,24 +25,24 @@
 
 </head>
 
-  <body>
+<body>
   <center><img src="images/phantom-low.png" class="logo" height="300" width="300" alt="Phantom low Rez" /></center>
-    <p>
-      <center>
+  <p>
+    <center>
   <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="startmenu"><i class="fab fa-fort-awesome"></i></button></a></li>
   <li><a href="https://www.youtube.com/"><button class="startmenu"><i class="fab fa-youtube"></i></button></a></li>
-  <li><a href="https://github.com/jeremysmai"><button class="startmenu"><i class="fab fa-github"></i></button></a></li>
   <li><a href="https://www.amazon.com"><button class="startmenu"><i class="fab fa-amazon"></i></button></a></li>
-    </center>
+  <li><a href="https://github.com/jeremysmai"><button class="startmenu"><i class="fab fa-github"></i></button></a></li>
+   </center>
   </p>
     <p>
   <h1>
-    Welcome, looks like you're online, that's good.
+    Welcome! Looks like you're online, that's good!
   </h1>
   </p>
     <p>
   <center>
-    Here are some things for proof:
+  <h2>  Here are some things for proof:
   <br />
     <script type="application/javascript">
       function getIP(json) {
@@ -53,7 +53,7 @@
   </center>
    </p>
    <!-- Easter Egg, Silicon Valley Style-->
-   <center>Made with love from <i class="fab fa-hooli"></i></center>
+   <center>Made with love from <i class="fab fa-hooli"></i></center></h2>
   </body>
 
   <footer>
