more tweaks to css

--- a/startpage.html
+++ b/startpage.html
@@ -42,7 +42,7 @@
   </p>
     <p>
   <center>
-  <h2>  Here are some things for proof:
+  <h3>  Here are some things for proof: </h3>
   <br />
     <script type="application/javascript">
       function getIP(json) {
@@ -53,7 +53,7 @@
   </center>
    </p>
    <!-- Easter Egg, Silicon Valley Style-->
-   <center>Made with love from <i class="fab fa-hooli"></i></center></h2>
+   <center><h3>Made with love from <i class="fab fa-hooli"></i></h3></center>
   </body>
 
   <footer>
