--- a/startpage.html
+++ b/startpage.html
@@ -42,7 +42,7 @@
   </p>
     <p>
   <center>
-  <h3>  Here are some things for proof: </h3>
+  <h3>  Here are some things for proof:
   <br />
     <script type="application/javascript">
       function getIP(json) {
@@ -50,10 +50,9 @@
       }
     </script>
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
+   </h3>
   </center>
    </p>
-   <!-- Easter Egg, Silicon Valley Style-->
-   <center><h3>Made with love from <i class="fab fa-hooli"></i></h3></center>
   </body>
 
   <footer>
