added speedtest, hopefully its still fast

--- a/startpage.html
+++ b/startpage.html
@@ -44,15 +44,18 @@
   <center>
   <h3>  Here are some things for proof:
   <br />
+  <!-- IP checking script -->
     <script type="application/javascript">
       function getIP(json) {
-        document.write("Your public ip is: ", json.ip);
+        document.write("Your public IP: ", json.ip);
       }
     </script>
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
    </h3>
   </center>
    </p>
+   <!-- Speedtest using custom URL -->
+   <p><center><iframe width="100%" height="650px" frameborder="0" src="https://phantominc.speedtestcustom.com"></iframe></center></p>
   </body>
 
   <footer>
