--- a/startpage.html
+++ b/startpage.html
@@ -55,7 +55,7 @@
   </center>
    </p>
    <!-- Speedtest using custom URL -->
-   <p><center><iframe width="100%" height="650px" frameborder="0" src="https://phantominc.speedtestcustom.com"></iframe></center></p>
+   <center><iframe width="50%" height="650px" frameborder="0" src="https://phantominc.speedtestcustom.com"></iframe></center>
   </body>
 
   <footer>
