--- a/startpage.html
+++ b/startpage.html
@@ -55,7 +55,12 @@
   </center>
    </p>
    <!-- Speedtest using custom URL -->
-   <center><iframe width="40%" height="600px" frameborder="0" src="https://phantominc.speedtestcustom.com"></iframe></center>
+   <center><button onclick="speedtest()">speedtest?</button>
+   <div id="speedtest">
+     <iframe width="40%" height="600px" frameborder="0" src="https://phantominc.speedtestcustom.com">
+     </iframe>
+   </div>
+   </center>
   </body>
 
   <footer>
